--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/main.go",
-            "args": ["--install", "config.json"]
+            "args": ["--uninstall", "config.json"]
         }
     ]
 }
