--- a/config.json
+++ b/config.json
@@ -2,15 +2,16 @@
 	"WMware":{
 		"FakeGuestDrivers":false,
 		"FakeGuestFiles":false,
-		"FakeGuestNetworkInterfaces":false,
+		"FakeGuestNetworkInterface": false,
 		"FakeGuestProcesses": ["VGAuthService.exe","vm3dservice","vmtoolsd","vmware-tray.exe"]
+		
 	},
 	"VirtualBox":{
 		"FakeVirtualBoxGuestAdditionsFiles":false,
-		"FakeGuestNetworkInterfaces":false,
+		"FakeGuestNetworkInterface": true,
 		"FakeGuestAdditionsProcesses": ["VBoxService.exe","VBoxTray.exe"]
 	},
-	"OtherRegistryKeys":true,
+	"OtherRegistryKeys":false,
 	"AnalysisTools":{
 		"FakeProcesses":["AccessEnum.exe", "Autoruns.exe", "Autoruns64.exe", "Diskmon.exe", "ImmunityDebugger.exe", "LastActivityView.chm", "LastActivityView.exe", "NetworkMiner.exe", "Procmon.exe", "Procmon64.exe", "PsService.exe", "PsService64.exe", "Pstools.chm", "WinDbg.exe", "Wireshark.exe", "autoruns.chm", "autorunsc.exe", "autorunsc.exe", "ida64.exe", "idag.exe", "idaq.exe", "ollydbg.exe", "procdump.exe", "procdump64.exe", "procexp.exe", "procexp64.exe", "pslist.exe", "pslist64.exe", "psloglist.exe", "psloglist64.exe", "python.exe", "tcpview.chm", "tcpview.exe", "vmacthlp.exe", "vmmap.exe", "vmmap64.exe", "volatility_2.6_win64_standalone.exe", "yara.exe", "yara32.exe", "yara64.exe", "yarac.exe", "yarac32.exe", "yarac64.exe"]
 	}
